# eye_bird_dataset_utils

./: README.md
annotations/: eye_bird_add_annotations.py
eye_bird_dataset_msgs/: CMakeLists.txt  package.xml
eye_bird_dataset_msgs/msg/: Annotation.msg  AnnotationArray.msg
flip_images/: eye_bird_flip_images.py
